package org.example;

public abstract class Figura {
    public abstract double calcularArea();
}